--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>JavaScript Hello World</title>
+    <script src="hello.js"></script>
+
+
+
 </head>
 
 
@@ -10,7 +14,7 @@
     <h1>A JavaScript Hello, World!</h1>
 
     <script>
-// your code goes here
+con
     </script>
 </body>
 
